--- a/VidlyByYo/Views/Movies/Random.cshtml
+++ b/VidlyByYo/Views/Movies/Random.cshtml
@@ -1,10 +1,33 @@
-﻿@model VidlyByYo.Models.Movie
+﻿@model VidlyByYo.ViewModels.RandomMovieViewModel
 
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Id</h2>
-<h2>@Model.Name</h2>
+@*
+    Comentario en
+    multiples lineas
+*@
 
+@{
+    var className = Model.Customers.Count > 0 ? "popular" : null;
+}
+
+<h2 class="@className">@Model.Movie.Name</h2>
+
+@if (Model.Customers.Count == 0)
+{
+    <text>    
+        Nadie a alquilado esta pelicula antes.
+    </text>
+}
+else
+{
+<ul>
+    @foreach (var customer in Model.Customers)
+    {
+    <li>@customer.Id - @customer.Name</li>        
+    }
+</ul>
+}
