--- a/VidlyByYo/Views/Customers/Index.cshtml
+++ b/VidlyByYo/Views/Customers/Index.cshtml
@@ -22,7 +22,7 @@
             @foreach (var customer in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(customer.Name,"Details", "Customer", new { id = customer.Id}, null)</td>
+                    <td>@Html.ActionLink(customer.Name,"Details", "Customers", new { id = customer.Id}, null)</td>
                 </tr>         
             }
         </tbody>
