--- a/VidlyByYo/Views/Customers/Index.cshtml
+++ b/VidlyByYo/Views/Customers/Index.cshtml
@@ -17,14 +17,16 @@
         <thead>
             <tr>
                 <th>Clientes</th>
+                <th>Descuento</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var customer in Model)
             {
-                <tr>
-                    <td>@Html.ActionLink(customer.Name,"Details", "Customers", new { id = customer.Id}, null)</td>
-                </tr>         
+            <tr>
+                <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                <td>@customer.MembershipType.DiscountRate %</td>
+            </tr>         
             }
         </tbody>
     </table>
