DataBse Movie Ok

--- a/VidlyByYo/Views/Customers/Details.cshtml
+++ b/VidlyByYo/Views/Customers/Details.cshtml
@@ -6,3 +6,10 @@
 }
 
 <h2>@Model.Name</h2>
+
+<li>Tipo de Membresia: @Model.MembershipType.Name</li>
+
+@if (Model.BirthDate.HasValue)
+{
+    <li>Fecha de Nacimento: @Model.BirthDate.Value.ToShortDateString()</li>     
+}
