--- a/VidlyByYo/Views/Customers/Index.cshtml
+++ b/VidlyByYo/Views/Customers/Index.cshtml
@@ -18,6 +18,7 @@
             <tr>
                 <th>Clientes</th>
                 <th>Descuento</th>
+                <th>Tipo de Membresia</th>
             </tr>
         </thead>
         <tbody>
@@ -26,6 +27,7 @@
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
                 <td>@customer.MembershipType.DiscountRate %</td>
+                <td>@customer.MembershipType.Name</td>
             </tr>         
             }
         </tbody>
