--- a/VidlyByYo/Views/Movies/Index.cshtml
+++ b/VidlyByYo/Views/Movies/Index.cshtml
@@ -10,14 +10,18 @@
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
-            <th>Movie</th>
+            <th>Nombre</th>
+            <th>Genero</th>
+            <th>Stock</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@movie.Name</td>
+                <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
+                <td>@movie.Genre.Name</td>
+                <td>@movie.NumberInStock</td>
             </tr>
         }
     </tbody>
